<resources>
    <string name="app_name">Grocery Store</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="groceries">Groceries</string>
    <string name="best_selling">Best Selling</string>
    <string name="None">TODO</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="search_store">Search Store</string>
    <string name="name">Name</string>
    <string name="pieces">pieces</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="vegetable_name">Vegetable Name</string>
    <string name="_0_00">$0.00</string>
    <string name="_0">0</string>
</resources>