<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_6sdp"
    android:background="@drawable/custom_border"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/None" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetable_name"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_12ssp"/>
    <TextView
        android:id="@+id/pieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pieces"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_2sdp"
        android:textSize="@dimen/_9ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:text="@string/_0_00"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/_12ssp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/green"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/remove"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="0.3"
                android:padding="@dimen/_3sdp"
                android:paddingBottom="@dimen/_30sdp"
                android:src="@drawable/minus"
                app:tint="@color/white"
                android:visibility="gone"
                android:contentDescription="@string/None"/>

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_6sdp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="0.3"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/add"
                app:tint="@color/white"
                android:contentDescription="@string/None" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>