<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/image"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:contentDescription="@string/None" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_store"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/bold_letters" />

        <LinearLayout
            android:id="@+id/LayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/round_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:weightSum="2">

            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_weight="0"
                android:src="@drawable/search"
                app:tint="@color/black"
                android:contentDescription="@string/None" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1.8"
                android:background="@null"
                android:hint="@string/search_store"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="102dp"
                    android:layout_margin="@dimen/_8sdp"
                    android:src="@drawable/fresh_vegetables"
                    android:contentDescription="@string/None" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginStart="@dimen/_12sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/exclusive_offer"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/see_all"
                        android:textColor="@color/green"
                        android:gravity="end"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/roboto_bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exclusiveOffer"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/groceries"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/see_all"
                        android:textColor="@color/green"
                        android:gravity="end"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/roboto_bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/groceries"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/best_selling"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/see_all"
                        android:textColor="@color/green"
                        android:gravity="end"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/roboto_bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bestSelling"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>