<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductDetails">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="224dp"
            android:background="@drawable/product_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/addToBasket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/grocery_image"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/pulses"
                android:contentDescription="@string/None" />


        </LinearLayout>

        <TextView
            android:id="@+id/grocery_name"
            android:layout_width="135dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/addToBasket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.049" />


        <TextView
            android:id="@+id/grocery_piece"
            android:layout_width="145dp"
            android:layout_height="21dp"
            android:text="@string/pieces"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintBottom_toTopOf="@+id/addToBasket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grocery_name"
            app:layout_constraintVertical_bias="0.027" />

        <ImageView
            android:id="@+id/blank"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/favourite_blank"
            app:layout_constraintBottom_toTopOf="@+id/addToBasket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/grocery_name"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.05"
            app:tint="@color/black"
            android:contentDescription="@string/None"/>


        <ImageView
            android:id="@+id/filled"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/favourite_filled"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/addToBasket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/grocery_name"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.05"
            android:contentDescription="@string/None" />

        <Button
            android:id="@+id/addToBasket"
            android:layout_width="291dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/bold_letters"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_to_basket"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/back"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            app:tint="@color/black"
            android:contentDescription="@string/None"/>


        <ImageView
            android:id="@+id/share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/share"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            app:tint="@color/black"
            android:contentDescription="@string/None" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>